@@ -1,0 +1,5 @@
+# Config file for Pragmatic InfiniBand Utilities.
+
+# errors to ignore when scanning port counter errors.
+SUPPRESS_ERRORS=PortRcvSwitchRelayErrors,PortXmitWait
+
