@@ -1,3 +1,8 @@
+- Thu Sep 09 2010 Ira Weiny <weiny2@llnl.gov>
+
+	* : ibtrackerrors.in: Add config file support
+	* : pragmatic-IB.conf: Add config file
+
 - Wed Sep 08 2010 Ira Weiny <weiny2@llnl.gov>
 
 	* : tag 1.1.2-2
